--- a/package.json
+++ b/package.json
@@ -6,14 +6,20 @@
     "start": "node ./bin/www"
   },
   "dependencies": {
+    "body-parser": "^1.19.0",
     "cookie-parser": "~1.4.4",
     "crypto-js": "^3.1.9-1",
     "debug": "~2.6.9",
     "express": "~4.16.1",
+    "firebase": "^6.2.4",
+    "firebase-admin": "^8.2.0",
     "http-errors": "~1.6.3",
     "morgan": "~1.9.1",
     "node-fetch": "^2.6.0",
     "node-sass-middleware": "0.11.0",
     "pug": "2.0.0-beta11"
+  },
+  "devDependencies": {
+    "cors": "^2.8.5"
   }
 }
