--- a/app.yaml
+++ b/app.yaml
@@ -1,11 +1,1 @@
-runtime: nodejs
-api_version: 1
-threadsafe: yes
-
-handlers:
-  - url: .*
-    script: main.app
-
-libraries:
-  - name: webapp2
-    version: "2.5.2"
+runtime: nodejs10
