--- a/package.json
+++ b/package.json
@@ -7,8 +7,10 @@
     "deploy": "gcloud app deploy"
   },
   "dependencies": {
+    "axios": "^0.19.0",
     "body-parser": "^1.19.0",
     "cookie-parser": "~1.4.4",
+    "cors": "^2.8.5",
     "crypto-js": "^3.1.9-1",
     "debug": "~2.6.9",
     "express": "~4.16.1",
@@ -19,8 +21,5 @@
     "node-fetch": "^2.6.0",
     "node-sass-middleware": "0.11.0",
     "pug": "2.0.0-beta11"
-  },
-  "devDependencies": {
-    "cors": "^2.8.5"
   }
 }
